Modified: rename; Wayde

--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,30 +7,30 @@
 </head>
 <body>
 <div style="width: 400px; margin: 20px auto;">
-    <a href="/">中文</a> <a href="/en.html">English</a>
+    <a href="/">中文</a> <a href="/index.html">English</a>
     <div>
-        <h2>孙伟</h2>
-        <p>专注企业级端到端解决方案</p>
+        <h2>Wayde Sun</h2>
+        <p>Focus on enterprise end to end solutions</p>
     </div>
     <hr>
 
-    <h5><span>写作</span></h5>
+    <h5><span>Books</span></h5>
     <ul>
-        <li><a href="https://ddd.sunwei.xyz" target="_blank">DDD - 领域驱动设计</a></li>
+        <li><a href="https://ddd.sunwei.xyz" target="_blank">DDD - Domain Design Driven</a></li>
         <li><a href="https://devops.sunwei.xyz" target="_blank">DevOps</a></li>
-        <li><a href="https://agile.sunwei.xyz" target="_blank">敏捷</a></li>
+        <li><a href="https://agile.sunwei.xyz" target="_blank">Agile</a></li>
     </ul>
 
-    <h5><span>工具</span></h5>
+    <h5><span>Tools</span></h5>
     <ul>
-        <li><a href="https://jsoneditoronline.cn/" target="_blank">JSON 在线编缉器</a></li>
-        <li><a href="https://fsky.top" target="_blank">程序员创作素材 - Top Funny Sky</a></li>
+        <li><a href="https://jsoneditoronline.cn/" target="_blank">JSON Editor Online</a></li>
+        <li><a href="https://fsky.top" target="_blank">Programmer creation material - Top Funny Sky</a></li>
     </ul>
 
-    <h5><span>关于</span></h5>
+    <h5><span>About</span></h5>
     <ul>
         <li><a href="https://github.com/sunwei" target="_blank">GitHub</a></li>
-        <li><a href="mailto:me@sunwei.xyz" target="_blank">邮箱：me@sunwei.xyz</a></li>
+        <li><a href="mailto:me@sunwei.xyz" target="_blank">Email：me@sunwei.xyz</a></li>
     </ul>
 
     <hr>
@@ -38,12 +38,11 @@
         <small>
             © Copyright 2020, sunwei.xyz
             <br>
-            兼容 <strong>IE6</strong>
+            Support <strong>IE6</strong>
             <span>&#128526;</span>
         </small>
     </footer>
 </div>
-
 
 </body>
 </html>
