--- a/en.html
+++ b/en.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div style="width: 400px; margin: 20px auto;">
-    <a href="/">中文</a> <a href="/index.html">English</a>
+    <a href="/">中文</a> <a href="/en.html">English</a>
     <div>
         <h2>Wayde Sun</h2>
         <p>Focus on enterprise end to end solutions</p>
