--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div style="width: 400px; margin: 20px auto;">
-    <a href="/">中文</a> <a href="/index.html">English</a>
+    <a href="/">中文</a> <a href="/en.html">English</a>
     <div>
         <h2>孙伟</h2>
         <p>专注企业级端到端解决方案</p>
