Modified: update books; Wayde

--- a/en.html
+++ b/en.html
@@ -16,9 +16,7 @@
 
     <h5><span>Books</span></h5>
     <ul>
-        <li><a href="https://ddd.sunwei.xyz" target="_blank">DDD - Domain Design Driven</a></li>
-        <li><a href="https://devops.sunwei.xyz" target="_blank">DevOps</a></li>
-        <li><a href="https://agile.sunwei.xyz" target="_blank">Agile</a></li>
+        <li><a href="https://ent.sunwei.xyz" target="_blank">Enterprise Service</a></li>
     </ul>
 
     <h5><span>Tools</span></h5>
