Modified: add for reading; Wayde

--- a/en.html
+++ b/en.html
@@ -17,6 +17,7 @@
     <h5><span>Books</span></h5>
     <ul>
         <li><a href="https://ent.sunwei.xyz" target="_blank">Enterprise Service</a></li>
+        <li><a href="https://buildkit.notes.sunwei.xyz/" target="_blank">Moby Buildkit source code reading notes</a></li>
     </ul>
 
     <h5><span>Tools</span></h5>
