--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </div>
     <hr>
 
-    <h5><span>写作</span></h5>
+    <h5><span>读书笔记</span></h5>
     <ul>
         <li><a href="https://ent.sunwei.xyz" target="_blank">企业级应用</a></li>
+        <li><a href="https://buildkit.notes.sunwei.xyz/" target="_blank">Moby Buildkit 源码读书笔记</a></li>
     </ul>
 
     <h5><span>工具</span></h5>
